[package]
name = "rkub-server"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
smol = "*"
async-channel = "*"
async-lock = "*"
tungstenite = "*"
async-tungstenite = "*"
anyhow = "*"
futures = "*"
rkub-common = { path = "../rkub-common" }
rand = "*"